fix[style.css]:first display button on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -781,10 +781,7 @@ footer a:hover{
         max-width: 350px;
         line-height: 22px;
     }
-
-    .first-page button{
-    }
-
+    
     .first-page-image-box{
         height: 300px;
     }
